[package]
name = "jwk-box"
version = "0.1.0"
edition = "2021"
authors = ["Andy Carlos <andy@twisting.ink>"]
description = "A simple JWK client."
license = "MIT"
keywords = ["jwt", "jwk", "validation", "client", "async"]
categories = ["authentication"]
repository = "https://github.com/andymakingthings/jwk-box"
documentation = "https://docs.rs/jwk-box/"
readme = "README.md"


[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
jwt-simple = "0.12.12"
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.124", features = ["derive"] }
serde_with = { version = "3.13.0", features = ["base64"] }
thiserror = "2.0.12"
